--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             <div class="animation-logo">
                 <div class="animation-logohim">
                     <img src="img/logohim.png" alt="logo" class="logohim">
+                    <img src="img/logohim.png" alt="logo" width="182px" height="296px" class="logohimmin">
                 </div>
             </div>
             <div class="animation-lines">
